# dev-note

./: .gitignore  README.md  note_start.zsh  readme_gen.py
complete-filter-by-command/: README.md
create-vim-plugin/: README.md
ddd/failure/: failure.md  null_object.md
fab-complete/: README.md  def.zsh  def2.zsh
fab-complete/src/: faball.sh
fetch-pull-request/: README.md
for-expression/: README.md
git-quickedit/: README.md  git-quickedit
git-template/: README.md
git/commit-is-not-working-log/: README.md
git/switch-repository/: README.md
haskell-ddd-business-and-system/: README.md
haskell-ddd-business-and-system/src/: option_a2.hs  option_c.hs  option_d.hs  option_f.hs  option_g.hs
haskell-ddd-identity-and-entity/doc/: Item.puml
haskell-ddd-represent-failure/src/: RepositoryImpl.hs
haskell-lint/: README.md
haskell-lint/src/: on.hs  on2.hs  point_free.hs
haskell-monad/: README.md
haskell-monad/src/: ApplicativeFunctor.hs  Do.hs  Functor.hs  FunctorLaw.hs  Instance.hs  Monad2.hs
haskell-validation/: README.md
haskell-validation/src/: Sample3.hs
haskell/ddd/04-form-and-validation/form-and-validation/: form-and-validation.cabal
haskell/ddd/04-form-and-validation/form-and-validation/src/Domain/Mail/: MailAddress.hs
haskell/ddd/04-form-and-validation/form-and-validation/src/Domain/Registration/: PersonalData.hs  RegistrationNumber.hs
haskell/ddd/04-form-and-validation/form-and-validation/src/Domain/User/: BirthDate.hs  FirstName.hs  FullName.hs  LastName.hs
haskell/ddd/04-form-and-validation/form-and-validation/src/Form/: Validator.hs
haskell/ddd/04-form-and-validation/form-and-validation/src/Form/Mail/: MailAddressForm.hs
haskell/ddd/04-form-and-validation/form-and-validation/src/Form/Registration/: PersonalDataForm.hs  PersonalDataForms.hs
haskell/ddd/04-form-and-validation/form-and-validation/src/Form/User/: BirthDateForm.hs  FirstNameForm.hs  FullNameForm.hs  FullNameForms.hs  LastNameForm.hs
haskell/ddd/04-form-and-validation/form-and-validation/test/Form/: ValidatorSpec.hs
haskell/ddd/04-form-and-validation/form-and-validation/test/Form/Mail/: MailAddressFormSpec.hs
haskell/ddd/04-form-and-validation/form-and-validation/test/Form/Registration/: PersonalDataFormSpec.hs  PersonalDataFormsSpec.hs
haskell/ddd/04-form-and-validation/form-and-validation/test/Form/User/: BirthDateFormSpec.hs  FirstNameFormSpec.hs  FullNameFormSpec.hs  FullNameFormsSpec.hs  LastNameFormSpec.hs
haskell/monad-transformer/: README.md  memo.md
haskell/monad-transformer/monad-transformer/: Either.hs  State.hs  Types.hs  Writer.hs  monad-transformer.cabal
haskell/monad-transformer/monad-transformer/app/: Main.hs
haskell/monad-transformer/monad-transformer/src/: IO.hs
java/doc-path/: README.md
java/to-string/: README.md
java8-sample/: README.md
java8-stream-then/: README.md
java8-streamable-list/: README.md
java9-repl/: README.md  Vagrantfile
mac-double-alphanumeric-key/: README.md
online-plant-viewing/: README.md
pull-request-review/: README.md  memo1.md  memo2.md
python-import/invalid-parent/: lib.py
quick-vim-setting/: 01_introduction.md  03_imap.md  06_move.md
scala-functions/: README.md
strict-builder/: bup.md
team-fab/: README.md  Vagrantfile  fabfile.py  setup.sh
tip-dropwhile/: README.md
trait-sample/: README.md  memo.md
(+128 files in other folders)
