name:                form-and-validation
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/form-and-validation#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  doc.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Domain.User.UserId
                     , Form.Validator
                     , Form.User.UserIdForm
  build-depends:       base >= 4.7 && < 5
                     , either >= 4.4.1.1
                     , regex-posix >= 0.95.2
                     , time >= 1.6.0.1
  default-language:    Haskell2010

executable form-and-validation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , form-and-validation
  default-language:    Haskell2010

test-suite form-and-validation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , form-and-validation
                     , hspec
                     , either >= 4.4.1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/form-and-validation
